<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.group8.dragcode.DifficultySelectActivity">

    <Button
        android:id="@+id/button_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onEasyClick"
        android:text="@string/diff_easy"
        app:layout_constraintBottom_toTopOf="@+id/button_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onMediumClick"
        android:text="@string/diff_medium"
        app:layout_constraintBottom_toTopOf="@+id/button_hard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_easy" />

    <Button
        android:id="@+id/button_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onHardClick"
        android:text="@string/diff_hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_medium" />

</android.support.constraint.ConstraintLayout>
