<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.group8.dragcode.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionSelection"
        android:onClick="questionSelection" />

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/testButton"
        android:onClick="onClickQuestion"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onPlayClick"
        android:text="@string/button_play"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button_stats"
        android:layout_alignStart="@+id/button_stats"
        android:layout_marginTop="122dp" />

    <Button
        android:id="@+id/button_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_play"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onStatsClick"
        android:text="@string/button_stats" />
</RelativeLayout>
